# feivel

./: .gitignore  README.en.md  README.md  feivel.cabal  makefile  notice  todo
doc/: history.txt
doc/dev/: modules.dot  overview.md
doc/examples/data-csv/: data-csv.fvl  data.csv  makefile
doc/examples/data-typekeyval/: data-typekeyval.fvl  makefile
doc/examples/define-scope/: define-scope.fvl  makefile
doc/examples/factor-poly/: factor-poly.fvl  makefile
doc/examples/fizz-buzz/: fizz-buzz.fvl  makefile
doc/examples/import/: data  import.fvl  makefile
doc/examples/macro-doc/: macro-doc.fvl  makefile
doc/examples/quadratic/: makefile  quadratic.fvl
doc/examples/s3-table/: makefile  s3-table.fvl
doc/examples/shell/: makefile  shell.fvl
doc/tutorial/: tutorial.md
doc/tutorial/ex/: ex001.fvl  ex002.fvl
src/Feivel/: Debug.hs  Error.hs  Eval.hs  EvalM.hs  Expr.hs  Format.hs  GUI.hs  Get.hs  Glyph.hs  Grammar.hs  Inject.hs  Key.hs  LaTeX.hs  Lib.hs  Locus.hs  Main.hs  Parse.hs  Put.hs  Store.hs  Type.hs  Typed.hs
src/Feivel/Eval/: Bool.hs  Doc.hs  Eval.hs  EvalM.hs  Expr.hs  Int.hs  List.hs  Mac.hs  Mat.hs  Perm.hs  Poly.hs  Rat.hs  Str.hs  Tuple.hs  Util.hs  ZZMod.hs
src/Feivel/Expr/: Bool.hs  Doc.hs  Expr.hs  Get.hs  Int.hs  List.hs  Mac.hs  Mat.hs  Perm.hs  Poly.hs  Put.hs  Rat.hs  Str.hs  Type.hs  Util.hs  ZZMod.hs
src/Feivel/GUI/: Strings.hs
src/Feivel/Grammar/: Bool.hs  Doc.hs  Expr.hs  Get.hs  GrammarClass.hs  Int.hs  List.hs  Mac.hs  Mat.hs  Perm.hs  Poly.hs  Put.hs  Rat.hs  Str.hs  Tuple.hs  Type.hs  Util.hs  ZZMod.hs
src/Feivel/Lib/: AlgErr.hs  Bool.hs  Canon.hs  Data.hs  Either.hs  List.hs  Matrix.hs  Monad.hs  Orders.hs  Pair.hs  Permutation.hs  Polynomial.hs  Rat.hs  Ring.hs  String.hs  Struct.hs  ZZMod.hs
src/Feivel/Lib/Algebra/: Group.hs  Ring.hs
src/Feivel/Lib/Data/: Monomial.hs  Natural.hs  QuadRat.hs  Rat.hs  ZZMod.hs
src/Feivel/Parse/: Bool.hs  Doc.hs  Expr.hs  Format.hs  Int.hs  Key.hs  List.hs  Mac.hs  Mat.hs  ParseM.hs  ParserDict.hs  Perm.hs  Poly.hs  Rat.hs  Store.hs  Str.hs  Tuple.hs  Type.hs  Util.hs  ZZMod.hs
src/Feivel/Store/: Key.hs  Locus.hs
test/Tests/: Main.hs  Util.hs
test/Tests/Lib/: Group.hs  Integer.hs  Matrix.hs  Polynomial.hs  Rat.hs  Ring.hs  ZZModulo.hs
test/gold/doc/: alt.test  comment.test  cond.test  define.test  eval.test  for.par.test  for.test  ifthen.test  let.test  scope.test  select.test  shell.cat.test  shell.define.test  shell.seq.test  shuffle.test  snarf.test
(+1139 files in other folders)
