Name:           feivel
Version:        0.2.1
Cabal-Version:  >= 1.2
License:        GPL-3
Copyright:      (c) 2015 Nathan Bloomfield
Author:         Nathan Bloomfield
Synopsis:       A simple template processor.
Stability:      Experimental
Build-Type:     Simple

Executable feivel
  main-is:        Feivel/Main.hs
  hs-source-dirs: src/
  ghc-options:    -main-is Feivel.Main -rtsopts -Wall
  build-depends:  base, parsec, containers, regex-posix,
                  random-fu, rvar, random-extras,
                  transformers, mtl, random, directory,
                  monadlist, primes, gtk, tostring, carl
